# svgsmith

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.po/: fix-batch.md  gen_gallery.py  gen_versions.py  harness.py  monitor.sh  review-batch.md  review-monitor.sh  smooth_proto.py
.po/cleanenv/: pyvenv.cfg
skills/vectorize/: SKILL.md
src/svgsmith/: __init__.py  __main__.py  classify.py  cli.py  pipeline.py  postprocess.py  preprocess.py  render.py  report.py  smooth.py  verify.py
src/svgsmith/engines/: base.py  binary.py  color.py
tests/: test_classify.py  test_cli.py  test_corpus.py  test_engines.py  test_pipeline.py  test_postprocess.py  test_preprocess.py  test_render.py  test_report.py  test_smooth.py  test_verify.py  test_xml_security.py
tests/corpus/: expected.json  make_corpus.py
tests/fixtures/: make_fixtures.py
tools/: quality_compare.py
