[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svgsmith"
dynamic = ["version"]
description = "Convert raster images into clean, editable SVG."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "svgsmith contributors" }]
keywords = ["svg", "vectorization", "raster", "potrace"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "vtracer==0.6.15",
    "Pillow>=10.4,<13",
    "numpy>=1.26,<3",
    "cairosvg>=2.7,<3",
    "scikit-image>=0.22,<0.27",
    "scipy>=1.11,<2",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8"]

[project.urls]
Homepage = "https://github.com/realproject7/svgsmith"
Repository = "https://github.com/realproject7/svgsmith"
Issues = "https://github.com/realproject7/svgsmith/issues"

[project.scripts]
svgsmith = "svgsmith.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Single source of truth for the version: svgsmith.__version__.
[tool.setuptools.dynamic]
version = { attr = "svgsmith.__version__" }

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
